| | |_ | |  | | |\/| | | |_ | / /\ \  
| |__| | |__| | |  | | |__| |/ ____ \ 
 \_____|\____/|_|  |_|\_____/_/    \_\

=======================================
Framework Backend
1.5.23
    - Criado duas classe de entidade base GumgaModelUUID e GumgaSharedModelUUID
    - Retirada a dependência do insula.opes
    - Correção na busca por data com GQuery nas operações LOWER_EQUAL e LOWER

1.5.22
    - Correção no GQuery com comparação de data

1.5.21
    - Implementação do inner e left join no GQuery

1.5.20
    - Implementação do GQuery

1.5.19
    - Correção NPE em HibernateQueryObject.createCriterion

1.5.18
 - Permite excluir múltiplos registros
 - Criação do módulo para envio via AWS async
 - Criação do módulo para relatórios da Simulsoft
 - Permir utilizar datas vazias no JavaScriptEngine
 - Correção no na busca de usuário por email
 - Criação de endereços com latitude e longitude nulos
 - Melhorias no AQO para validar ownership
 - 
 - Retirado System.out.println RECEBIDA e CONVERTIDA
 - Corrigido excessão NullPointerException ao instancia BigDecimal na classe GumgaCustomFieldValue
 - Adicionado campo colSize na classe GumgaCustomField para poder personalizar tamanho dos campo

   ***************************IMPORTANTE QUEBRA DE COMPILAÇÃO****************************************************
   * Como foi adicionado novo campo na classe (GumgaCustomField), se utilizar liquibase, é necessário criar um  *
   * changeset para adicionar este campo na tabela                                                              *
   * Novo atributo : **private Integer colSize**                                                                *
   **************************************************************************************************************

 -

1.5.17
  - Adicionado FieldErrors no GumgaRunTimeException

1.5.15
  - Melhora nas mensagens quando a comunicação com o segurança está indisponível
  - Inclusão no GumgaAddres do atributo stateCode